--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-scim2-client = "^0.1.4"
+scim2-client = "^0.1.6"
 
 [tool.poetry.group.doc]
 optional = true
@@ -37,10 +37,11 @@ pytest-coverage = "^0.0"
 pytest-httpserver = "^1.0.10"
 
 [tool.poetry.group.doc.dependencies]
+autodoc-pydantic = "^2.2.0"
+myst-parser = "^3.0.1"
 shibuya = "^2024.5.15"
 sphinx = "^7.3.7"
 sphinx-click = "^6.0.0"
-myst-parser = "^3.0.1"
 
 [tool.coverage.run]
 source = [
