chore: add license file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "scim2-tester"
 version = "0.1.5"
 description = " Check SCIM RFCs server compliance"
 authors = ["Yaal Coop <contact@yaal.coop>"]
-license = "MIT"
+license = "Apache"
 readme = "README.md"
 keywords = ["scim", "scim2", "provisioning", "rfc7643", "rfc7644"]
 classifiers = [
