--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,52 +1,54 @@
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
+[project]
 name = "scim2-tester"
 version = "0.1.5"
 description = " Check SCIM RFCs server compliance"
-authors = ["Yaal Coop <contact@yaal.coop>"]
-license = "Apache"
+authors = [{name="Yaal Coop", email="contact@yaal.coop"}]
+license = {file = "LICENSE.md"}
 readme = "README.md"
 keywords = ["scim", "scim2", "provisioning", "rfc7643", "rfc7644"]
 classifiers = [
     "Intended Audience :: Developers",
     "Development Status :: 3 - Alpha",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: CPython",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Environment :: Web Environment",
     "Programming Language :: Python",
     "Operating System :: OS Independent",
 ]
 
-[tool.poetry.urls]
+requires-python = ">= 3.10"
+dependencies = [
+    "scim2-client>=0.2.0",
+]
+
+[project.urls]
+documentation = "https://scim2-tester.readthedocs.io"
+repository = "https://github.com/yaal-coop/scim2-tester"
 changelog = "https://scim2-tester.readthedocs.io/en/latest/changelog.html"
 funding = "https://github.com/sponsors/yaal-coop"
 
-[tool.poetry.dependencies]
-python = "^3.10"
-scim2-client = "^0.2.0"
-
-[tool.poetry.group.doc]
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.2.1"
-pytest-coverage = "^0.0"
-pytest-httpserver = "^1.0.10"
-
-[tool.poetry.group.doc.dependencies]
-autodoc-pydantic = "^2.2.0"
-myst-parser = "^3.0.1"
-shibuya = "^2024.5.15"
-sphinx = "^7.3.7"
-sphinx-click = "^6.0.0"
+[tool.uv]
+dev-dependencies = [
+# development
+    "pytest>=8.2.1",
+    "pytest-coverage>=0.0",
+    "pytest-httpserver>=1.0.10",
+    "tox-uv>=1.15.0",
+# documentation
+    "autodoc-pydantic>=2.2.0",
+    "myst-parser>=3.0.1",
+    "shibuya>=2024.5.15",
+    "sphinx>=7.3.7",
+    "sphinx-click>=6.0.0",
+]
 
 [tool.coverage.run]
 source = [
@@ -80,43 +82,40 @@ ignore = [
 [tool.ruff.lint.isort]
 force-single-line = true
 
-[too.ruff.format]
+[tool.ruff.format]
 docstring-code-format = true
 
 [tool.tox]
-legacy_tox_ini = """
-[tox]
-isolated_build = true
-skipsdist = true
-envlist =
-    style
-    py310
-    py311
-    py312
-    py313
-    doc
-    coverage
+requires = ["tox>=4.19"]
+env_list = [
+    "style",
+    "py310",
+    "py311",
+    "py312",
+    "py313",
+    "doc",
+    "coverage",
+]
 
-[testenv]
-allowlist_externals = poetry
-commands =
-    poetry install
-    poetry run pytest --showlocals --full-trace {posargs}
+[tool.tox.env_run_base]
+commands = [
+    ["pytest", "--showlocals", "--full-trace", "{posargs}"],
+]
 
-[testenv:style]
-commands =
-    pip install pre-commit
-    pre-commit run --all-files
+[tool.tox.env.style]
+deps = "pre-commit-uv"
+commands = [
+    ["pre-commit", "run", "--all-files", "--show-diff-on-failure"],
+]
 
-[testenv:doc]
-commands =
-    poetry install --with doc --without dev
-    poetry run sphinx-build --builder html doc build/sphinx/html
-    poetry run sphinx-build --builder man doc build/sphinx/html
+[tool.tox.env.doc]
+commands = [
+    ["sphinx-build", "--builder", "html", "doc", "build/sphinx/html"],
+    ["sphinx-build", "--builder", "man", "doc", "build/sphinx/html"],
+]
 
-[testenv:coverage]
-commands =
-    poetry install
-    poetry run pytest --cov --cov-fail-under=100 --cov-report term:skip-covered {posargs}
-    poetry run coverage html
-"""
+[tool.tox.env.coverage]
+commands = [
+    ["pytest", "--cov", "--cov-fail-under=100", "--cov-report", "term:skip-covered", "{posargs}"],
+    ["coverage", "html"],
+]
