tests: add minversions test in tox

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,7 @@ env_list = [
     "py311",
     "py312",
     "py313",
+    "minversions",
     "doc",
     "coverage",
 ]
@@ -106,6 +107,12 @@ commands = [
 deps = "pre-commit-uv"
 commands = [
     ["pre-commit", "run", "--all-files", "--show-diff-on-failure"],
+]
+
+[tool.tox.env.minversions]
+uv_resolution = "lowest-direct"
+commands = [
+    ["pytest", "--showlocals", "--full-trace", "{posargs}"],
 ]
 
 [tool.tox.env.doc]
