--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,9 @@ dependencies = [
 
 [project.urls]
 documentation = "https://scim2-tester.readthedocs.io"
-repository = "https://github.com/yaal-coop/scim2-tester"
+repository = "https://github.com/python-scim/scim2-tester"
 changelog = "https://scim2-tester.readthedocs.io/en/latest/changelog.html"
-funding = "https://github.com/sponsors/yaal-coop"
+funding = "https://github.com/sponsors/python-scim"
 
 [dependency-groups]
 dev = [
