--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ funding = "https://github.com/sponsors/python-scim"
 
 [dependency-groups]
 dev = [
+    "pre-commit-uv>=4.1.4",
     "pytest>=8.2.1",
     "pytest-coverage>=0.0",
     "pytest-httpserver>=1.0.10",
@@ -113,12 +114,12 @@ env_list = [
 
 [tool.tox.env_run_base]
 runner = "uv-venv-lock-runner"
+dependency_groups = ["dev"]
 commands = [
     ["pytest", "--showlocals", "--full-trace", "{posargs}"],
 ]
 
 [tool.tox.env.style]
-deps = ["pre-commit-uv"]
 runner = "uv-venv-runner"
 commands = [
     ["pre-commit", "run", "--all-files", "--show-diff-on-failure"],
@@ -126,9 +127,6 @@ commands = [
 
 [tool.tox.env.minversions]
 uv_resolution = "lowest-direct"
-commands = [
-    ["pytest", "--showlocals", "--full-trace", "{posargs}"],
-]
 
 [tool.tox.env.doc]
 dependency_groups = ["doc"]
