--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,6 +30,8 @@ jobs:
           enable-cache: true
       - name: Install Python ${{ matrix.python }}
         run: uv python install ${{ matrix.python }}
+      - name: Install dependencies
+        run: uv sync --all-extras
       - name: Run tests
         run: uv run pytest --showlocals
 
@@ -43,7 +45,7 @@ jobs:
         with:
           enable-cache: true
       - name: Install minimum dependencies
-        run: uv sync --resolution=lowest-direct
+        run: uv sync --all-extras --resolution=lowest-direct
       - name: Run tests
         run: uv run pytest --showlocals
 
