--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ httpx = [
 
 [dependency-groups]
 dev = [
+    "mypy>=1.13.0",
     "pre-commit-uv>=4.1.4",
     "pytest>=8.2.1",
     "pytest-coverage>=0.0",
@@ -106,6 +107,11 @@ force-single-line = true
 
 [tool.ruff.format]
 docstring-code-format = true
+
+[tool.mypy]
+plugins = [
+  "pydantic.mypy"
+]
 
 [tool.tox]
 requires = ["tox>=4.19"]
